maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: not found: value int
      case 0 => etat=int(courrirNord())
                     ^IslandMaze:7: error: not found: value int
      case 1 => etat=int(suivreGauche())
                     ^IslandMaze:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    0
    ^IslandMaze:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    1
    ^IslandMaze:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  1
  ^